--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+
+  "name": "source-miner",
+  "version": "1.0.0",
+  "type": "module",
+
   "dependencies": {
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
