search only in comments available.Some docs

--- a/probe.yaml
+++ b/probe.yaml
@@ -12,7 +12,9 @@ keepExtension:
     - '.mjs'
     - '.yaml'
 
-ignoreComments: on
+search:
+  code: on     # search in code 
+  comments: on # search in comment
     
 regex: 
   pattern: '/file/'
