--- a/samples/searchInJava.yaml
+++ b/samples/searchInJava.yaml
@@ -72,6 +72,9 @@ showLinesAfter : 0
 #----------------------------------
 # Reports 
 #----------------------------------
+
+displayProbe: "off"
+
 # intermediate report for each rootToExplore
 detailedReport: off
 
